# testebbm

./: Dockerfile  Procfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
bbm/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  models.py  serializers.py
core/migrations/: 0001_initial.py  0002_editora_nomeeditora.py  0003_autor.py  0004_alter_autor_options_livros.py  0005_livros_autor.py  0006_compra.py  0007_itenscompra.py  0008_rename_livros_livro.py  0009_alter_autor_options.py
core/views/: __init__.py  categoria.py  categoriaApiView.py  categoriaClass.py  categoriaGeneric.py  compra.py  livro.py  testesIniciais.py
